--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,8 @@
   margin: 0;
   box-sizing: border-box;
 }
-body{
-    background-color: rgb(0, 0, 155);
+body {
+  background-color: rgb(0, 0, 155);
 }
 /* Mian Container  */
 .container {
@@ -32,23 +32,23 @@ body{
 .tool_bar > div:nth-child(1) button {
   padding: 10px 20px;
   border: none;
-  font-weight: bold ;
-  font-family: 'Rubik', sans-serif;
+  font-weight: bold;
+  font-family: "Rubik", sans-serif;
   color: white;
   border-radius: 10px;
   background-color: rgb(0, 42, 255);
   cursor: pointer;
-  transition: .3s;
+  transition: 0.3s;
 }
-.tool_bar > div:nth-child(1)>button:nth-child(2) {
-    background-color: red;
+.tool_bar > div:nth-child(1) > button:nth-child(2) {
+  background-color: red;
 }
 /* Button Hover Effect */
-.tool_bar > div:nth-child(1)>button:nth-child(1):hover {
-    box-shadow: 2px 2px 5px rgb(0, 42, 255);
+.tool_bar > div:nth-child(1) > button:nth-child(1):hover {
+  box-shadow: 2px 2px 5px rgb(0, 42, 255);
 }
-.tool_bar > div:nth-child(1)>button:nth-child(2):hover {
-    box-shadow: 2px 2px 5px red;
+.tool_bar > div:nth-child(1) > button:nth-child(2):hover {
+  box-shadow: 2px 2px 5px red;
 }
 
 /* Color Section  */
@@ -69,33 +69,34 @@ body{
   border-radius: 20px;
   border: 2px solid white;
 }
-.default-colors label{
-    font-weight: bold;
-    font-family: 'Rubik', sans-serif;
+.default-colors label {
+  font-weight: bold;
+  font-family: "Rubik", sans-serif;
 }
 /* Targeting Each div in Default Colors Div  */
-.default-colors>div:nth-child(1){
-    background-color: red;
+.default-colors > div:nth-child(1) {
+  background-color: red;
 }
-.default-colors>div:nth-child(2){
-    background-color: blue;
+.default-colors > div:nth-child(2) {
+  background-color: blue;
 }
-.default-colors>div:nth-child(3){
-    background-color: yellow;
+.default-colors > div:nth-child(3) {
+  background-color: yellow;
 }
-.default-colors>div:nth-child(4){
-    background-color: green;
+.default-colors > div:nth-child(4) {
+  background-color: green;
 }
-.default-colors>div:nth-child(5){
-    background-color: brown;
+.default-colors > div:nth-child(5) {
+  background-color: brown;
 }
 /* Default Color input styling */
-.default-colors input{
-    height: 40px;
-    width: 40px;
-    cursor: pointer;
-    border: none;
-    background-color: white;
+.default-colors input {
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+  border: none;
+  color: orchid;
+  background-color: white;
 }
 
 /* Pen Thickness Styling */
@@ -110,14 +111,23 @@ body{
 }
 /* lable of pen thickness */
 .tool_bar > div:nth-child(3) label {
-    font-size: 1em;
-    font-family: 'Rubik', sans-serif;
-    font-weight: bold;
+  font-size: 1em;
+  font-family: "Rubik", sans-serif;
+  font-weight: bold;
 }
 /* input of pen thickness */
-.tool_bar > div:nth-child(3) input {
+.tool_bar > div:nth-child(3) select {
   padding: 5px;
   cursor: pointer;
+  font-weight: bold;
+  border-radius: 20px;
+  transition: 0.3s;
+}
+.tool_bar > div:nth-child(3) select option {
+  cursor: pointer;
+  padding: 10px;
+  text-align: center;
+  font-size: 1.3em;
 }
 
 /* Canvas Styling  */
@@ -125,4 +135,5 @@ body{
   background-color: white;
   height: 80vh;
   border-radius: 30px;
+  cursor: crosshair;
 }
