--- a/mainQ.css
+++ b/mainQ.css
@@ -105,7 +105,7 @@
     width: 4.19em;
   }
 }
-@media (max-width: 653px) {
+@media (max-width: 677px) {
   .container {
     column-gap: 0;
   }
@@ -148,6 +148,9 @@
   }
   .colors .second_row > div:nth-child(5) {
     display: none;
+  }
+  #canvas{
+    width: 90%;
   }
 }
 @media (max-width: 499px) {
@@ -199,7 +202,7 @@
   }
 
   .container > div:nth-child(3) {
-    column-gap: 10px;
+    column-gap: 3px;
   }
   .colors .first_row {
     display: none;
@@ -209,9 +212,17 @@
   }
 }
 @media (max-width:365px) {
-    .brush {
+    #brush {
         height: 30px;
         width: 30px;
+        font-size: 1em;
+        font-weight: bolder;
+      }
+      #eraser {
+        height: 30px;
+        width: 30px;
+        font-size: 1em;
+        font-weight: bolder;
     }
 .container > div:nth-child(3) select {
     padding: 4px 0px;
